# brokerkitacademy

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GAMMA_QUICKSTART.md  LICENSE  MANIFEST.in  README.md  agents.md  claude.md  pyproject.toml  requirements.txt
.claude/commands/: create_academy_content.md  create_docs.md  create_slides.md  create_training.md  create_webinar.md  new_chat.md  review.md  update_slides.md
assets/content/docs/: BrokerkBoost - AI Outbound Recruiter Customer Playbook.md  BrokerkBoost - Social Ads Customer Playbook.md
assets/slides/: brokerboost-ai-outbound-recruiter-playbook.md  brokerboost-job-ads-mastery.md  brokerboost-social-ads-playbook.md  example-presentation-template.md
assets/slides/customer_bootcamp/: CB3-Agent-Recruiting-with-Brokerkit-gk88upoj3jm098e.md  CB4-Advanced-Recruiting-Retention-Strategies-ewbl2qfx01jqn5s.md  CB4-Advanced-Recruiting-Retention-Strategies.md
docs/: Brokerboost AI Outbound Recruiter Playbook.md  BrokerkBoost - Job Ads Customer Playbook.md  GAMMA_QUICKSTART.md
docs/archive/: BrokerkBoost - Linkedin Customer Playbook.md
scripts/gamma/: README.md  __init__.py  create_slides.py  gamma_metadata.py  gamma_themes.py  view_metadata.py
slides/: .gitkeep  gamma_metadata.json
src/assets/slides/: gamma_metadata.json
src/brokerkitacademy/: __init__.py
src/brokerkitacademy/gamma/: __init__.py  client.py  metadata.py  themes.py
src/brokerkitacademy/gamma/cli/: __init__.py  create_slides.py  view_metadata.py
tests/: __init__.py  conftest.py  test_gamma_client.py  test_metadata.py  test_themes.py
